camellia-redis-proxy support multi-read-resources while rw_separate